--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to Aditya Bararia's Page
+description: Bookmark this to keep an eye on my project updates
