--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 title: Welcome to Aditya Bararia's Page
 description: Bookmark this to keep an eye on my project updates
